# gip

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .golangci.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.cargo/: config.toml
.github/: FUNDING.yml  PRE_PUSH_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  test.yml
cmake/: GipCompilerWarnings.cmake  GipSanitizers.cmake  GipStaticAnalysis.cmake  GipVersion.cmake  gipConfig.cmake.in
ctoon/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
ctoon/examples/: example_basic.cpp  example_tabular.cpp  sample1_primitives.cpp  sample2_objects.cpp  sample3_fileio.cpp  sample4_serialization.cpp
ctoon/includes/: ctoon.h
ctoon/src/binding/: main.cpp
ctoon/src/sources/: cli.cpp  ctoon.cpp  ctoon_json.cpp  ctoon_toon.cpp  utils.cpp  utils.h  yyjson.c  yyjson.h
ctoon/tests/cpp/: test_ctoon.cpp
ctoon/tests/data/: sample1_user.json  sample1_user.toon  sample2_users.json  sample3_nested.json  sample3_nested.toon  sample4_users.json  sample4_users.toon  twitter.toon
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  CODING_STANDARDS.md  MIGRATION_V2.md  RELEASE_V2.md  TOON_INTEGRATION.md
examples/: toon_format.rs
include/gip/: console.h  gip.h  git_adapter.h  manifest.h  merge_driver.h  types.h  version.h
internal/diff/: analyzer.go  analyzer_test.go  breaking_test.go
internal/git/: integration.go
internal/llm/: generator.go  generator_test.go  openai.go  prompts.go
internal/manifest/: storage.go  storage_test.go  toon.go  toon_test.go  types.go
internal/merge/: driver.go  driver_test.go
internal/prompt/: ai.go  global_intent_test.go  interactive.go
internal/toon/: serializer.go
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  setup_hooks.ps1  setup_hooks.sh  test_integration.ps1  test_integration.sh
scripts/git-hooks/: pre-commit
src/: diff_analyzer.cpp  diff_analyzer.h  git.rs  git_adapter.cpp  git_adapter.h  lib.rs  main.cpp  main.rs  manifest.cpp  manifest.h  merge.rs  merge_driver.cpp  merge_driver.h  types.cpp
src/commands/: commit.cpp  commit.h  commit.rs  context.cpp  context.h  context.rs  init.cpp  init.h  init.rs  merge.cpp  merge.h  merge.rs  mod.rs  passthrough.cpp  passthrough.h  passthrough.rs  push.cpp  push.h  push.rs  rebase.cpp  rebase.h  rebase.rs
src/diff/: analyzer.rs  mod.rs
src/manifest/: mod.rs  storage.rs  toon.rs  types.rs
src/merge/: driver.rs  mod.rs
src/prompt/: interactive.rs  mod.rs
src/toon/: mod.rs  serializer.rs
tests/: CMakeLists.txt  README.md  integration_test.rs
tests/helpers/: git.go  manifest.go
tests/integration/: func1.py  merge_test.go  performance_test.go  selective_injection_test.go  test_e2e.ps1
tests/unit/: test_context.cpp  test_main.cpp  test_manifest.cpp  test_merge_driver.cpp
